@@ -1,5 +1,8 @@
 1999-04-28  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
+	* HDF5Object.m ([HDF5CompoundType_c -packObj:to:],
+	[HDF5CompoundType_c -writeLevel:]): Use PTRINT for offset (cast to id).
+
 	* FArguments.[hm], FCall.m: Undef __mips__ before including avcall.h.
 
 	* FCall.m: Include avcall.h.
